# bacon-distance

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.neo4j  Dockerfile.web  Makefile  README.md  bacon_distance.py  consts.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  exceptions.py  generate_db.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  system-requirements-dev.txt
bacondistance/api/: lifespan.py  main.py  paths.py  schemes.py
bacondistance/scripts/: bacon_distance.py  generate_db.py  update_imdb_data.py
bacondistance/utils/: consts.py  exceptions.py  load.py  models.py  paths.py
examples/: dataset_example.json
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
neo4j/conf/: neo4j.conf
neo4j/scripts/init/: initialize_db.sh
neo4j/scripts/init/bash/: 00-init-graphs.sh  01-init-roles.sh  02-init-users.sh  03-assign-roles.sh
neo4j/scripts/init/cypher/: create-bacon-distance-app-role.cypher
